# C-RAG

./: 1._basic_RAG.ipynb  2_retrieval_refinement.ipynb  3_retrieval_eavaluator.ipynb  4_web_search_refinement.ipynb  5_Query_rewrite.ipynb  6_ambiguous.ipynb  main.py  pyproject.toml  requirements.txt
