[project]
name = "crag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.8",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "pypdf>=6.7.0",
    "sentence-transformers>=5.2.2",
]
